# physrisk-api

./: .gitignore  .pre-commit-config.yaml  .thoth.yaml  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  credentials_template.env  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml  ci.yml  push-image.yaml  push-test-image.yaml  release.yml  test-build-push.yml  test-build-testpush.yaml
nginx/: Dockerfile
src/physrisk-api/: Dockerfile  docker-compose.yml  server.py
src/physrisk-api/app/: __init__.py
src/physrisk-api/nginx/: Dockerfile  physrisk-api.conf
src/physrisk_api/: server.py
src/physrisk_api/app/: __init__.py  api.py  auth.py  container.py  logging_config.py  main.py  override_providers.py  service.py
src/physrisk_api/app/routers/: asset.py  auth.py  container.py  hazard.py  sources.py  visualisation.py
src/test/: test_api.py  test_app.py
src/tests/: api_test.py  test_api.py
